src/test/deca/etapeB/valid/boolean_decl.deca
// Description:
//    Déclaration de booléens
//
// Resultats:
//    ok
// 

{
   boolean a;
   boolean b = false;
   boolean c = true,d = false;
   boolean e,f,g;
}
